--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app"
@@ -25,15 +24,18 @@
     ]
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.59.3",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.1",
     "@types/geojson": "^7946.0.10",
+    "@types/leaflet": "^1.9.1",
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11"
